// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdleMonitor from react-simple-idle-monitor Initial rendering with activeClassName and no children 1`] = `
<div
  className="active"
/>
`;

exports[`IdleMonitor from react-simple-idle-monitor Initial rendering with children and activeClassName 1`] = `
<div
  className="active"
>
  <p>
    Hello
  </p>
</div>
`;

exports[`IdleMonitor from react-simple-idle-monitor Initial rendering with children and no properties 1`] = `
<p>
  Hello
</p>
`;

exports[`IdleMonitor from react-simple-idle-monitor Initial rendering with no properties nor children 1`] = `""`;

exports[`IdleMonitor from react-simple-idle-monitor Rendering after timeout with children and idleClassName 1`] = `"<div class=\\"idle\\"><p>Hello</p></div>"`;

exports[`IdleMonitor from react-simple-idle-monitor Rendering after timeout with children and no properties 1`] = `"<p>Hello</p>"`;

exports[`IdleMonitor from react-simple-idle-monitor Rendering after timeout with idleClassName and no children 1`] = `"<div class=\\"idle\\"></div>"`;

exports[`IdleMonitor from react-simple-idle-monitor Rendering after timeout with no properties nor children 1`] = `null`;

exports[`IdleMonitor from react-simple-idle-monitor server-side rendering (no document) no change of state after timeout 1`] = `"<div class=\\"active\\"><p>Hello</p></div>"`;

exports[`IdleMonitor from react-simple-idle-monitor using reactDOM/server Using renderToStaticMarkup with no DOM 1`] = `"<div class=\\"active\\"><p>Hello</p></div>"`;

exports[`IdleMonitor from react-simple-idle-monitor using reactDOM/server Using renderToString with no DOM 1`] = `"<div class=\\"active\\" data-reactroot=\\"\\"><p>Hello</p></div>"`;
